2006-02-28  Daniel Stone  <daniel@freedesktop.org>

	* xkb/maprules.c:
	Bug #5216: Allow options to appear with other components.

2006-02-28  Adam Jackson  <ajax@freedesktop.org>

	* XpConfig/C/print/models/CANONC3200-PS/fonts/Makefile.am:
	* XpConfig/C/print/models/HPLJ4050-PS/fonts/Makefile.am:
	* XpConfig/C/print/models/SPSPARC2/fonts/Makefile.am:
	Bug #5627: Fix Xprint font symlinking. (TIlman Sauerbeck)

2006-02-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/darwin/quartz/XDarwinStartup.man:
	* hw/darwin/utils/dumpkeymap.man:
	Typo fixes (Nicholas Joly, XFree86 bugzilla #1658)

2006-02-24  Roland Scheidegger <rscheidegger_lists@hispeed.ch>

	* hw/xfree86/common/xf86PciInfo.h:
	Add two radeon pci ids (one is used for a radeon mobility X700 XL
	in a medion notebook, the other is for a AIW X800 VE)

2006-02-24  Matthieu Herrb <matthieu.herrb@laas.fr>

	* configure.ac:
	OpenBSD supports PCVT and WSCONS. PCCONS is long gone. 

2006-02-23  Adam Jackson  <ajax@freedesktop.org>

	* exa/exa_render.c:
	Remove redundant composite op reduction, done in Render now.

2006-02-22  Alexander Gottwald  <ago@starnet.com>

	* GL/glx/render2swap.c:
	Bug #5978: Added missing swap of input variables. Added missing cases
	for GL_SECONDARY_COLOR_ARRAY and GL_FOG_COORD_ARRAY (Colin McDonald)

2006-02-22  Alexander Gottwald  <ago@starnet.com>

	* hw/dmx/Makefile.am:
	* hw/dmx/input/Makefile.am:
	* hw/dmx/config/Makefile.am:

	Added Mesa include directory

2006-02-21  Jeremy C. Reed  <reed@reedmedia.net>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:

	Update to build against Mesa HEAD.

2006-02-20  Ian Romanick  <idr@us.ibm.com>

	* hw/xfree86/os-support/bus/Pci.c: (handlePciBIOS), (readPciBios),
	(HandlePciBios), (xf86ReadPciBIOS):
	* hw/xfree86/os-support/bus/xf86Pci.h:

	Eliminate unused PCI BIOS reading functionality.  The old code
	used several function pointers to implement a level of
	flexability that was never used.  The code also had unused